@@ -96,10 +96,13 @@ int KMAddrBook::load(const char* aFileName)
   if (!file.open(IO_ReadOnly)) return file.status();
   clear();
 
-  while (!file.atEnd() && file.readLine(line,255)>0 )
+  while (!file.atEnd())
   {
-    if (line[strlen(line)-1] < ' ') line[strlen(line)-1] = '\0';
-    if (line[0]!='#' && line[0]!='\0') inSort(line);
+    if (file.readLine(line,255) > 0)
+    {
+      if (line[strlen(line)-1] < ' ') line[strlen(line)-1] = '\0';
+      if (line[0]!='#' && line[0]!='\0') inSort(line);
+    }
   }
   rc = file.status();
   file.close();
